Criado a galeria de imagens e atualizado links

--- a/css/style.css
+++ b/css/style.css
@@ -225,6 +225,12 @@ html{
     margin-left: 15px;
 }
 
+.div-galeria{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 50px;
+}
+
 /* Section Contato */
 footer{
     display: flex;
