--- a/css/media.css
+++ b/css/media.css
@@ -290,7 +290,7 @@ footer{
   .container-amarelo{
       width: 100%; 
       opacity: 1;
-
+      transform: translate3d(0,0,0);
   }
   .container-amarelo p{
       font-size: 1.4rem;
@@ -300,7 +300,7 @@ footer{
       margin: 30px auto 0px;
       width: 100%;
       opacity: 1;
-
+      transform: translate3d(0,0,0);
   }
   .mvv li{
       display: flex;
@@ -310,9 +310,17 @@ footer{
   .mvv p{
       text-align: center;
   }
+  .citacao{
+    opacity: 1;
+  }
   .citacao p{
       font-size: 1.4rem;
       width: 100%;
   }
+
+  .section-servicos{
+    opacity: 1;
+  }
+
   
 }
